# projeto_openbi_gcp_conta_azul

./: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
src/: api.py  big_query.py  config.py  main.py
src/extractors/: dCategorias.py  dCentroCusto.py  dClientes.py  dContaCorrente.py  fCentroCusto.py  fContasPagar.py  fContasReceber.py
